<resources>
    <string name="app_name">Doctor Appointment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget your password?</string>
    <string name="forget_password2">Forget Password</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">logo</string>
    <string name="hello_friend">Hello, Friends!</string>
    <string name="choose_account_type">Choose the account type and start journey with us</string>
    <string name="have_account">Have account?</string>

    <string name="click_image">Click to choose your image profile</string>
    <string name="account_type">Account Type</string>
    <string name="arrow_back">back icon</string>
    <string name="camera">camera</string>
    <string name="phone">Phone</string>
    <string name="clear">Clear</string>
    <string name="next">next</string>
    <string name="basic_info">Personal Data</string>
    <string name="specialization">Specialization</string>
    <string name="address">Address</string>
    <string name="working_hour">Work Hour</string>

    <string-array name="account_type">
        <item>Select Account Type</item>
        <item>Doctor</item>
        <item>Patient</item>
    </string-array>

    <string-array name="specializations">
        <item>Select Your Specializations</item>
        <item>Tooth</item>
        <item>Heart</item>
        <item>Eyes</item>
        <item>Bones</item>
        <item>Brain</item>
    </string-array>

    <string-array name="days">
        <item>Select Day</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string name="biography">Biography</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="start_day">Start Day</string>
    <string name="end_day">End Day</string>
    <string name="start_hour">Start Hour</string>
    <string name="end_hour">End Hour</string>
    <string name="time_for_each_case">Time for each case</string>
    <string name="back">Back</string>
    <string name="choose_time">Choose Time</string>
    <string name="homepage">Homepage</string>
    <string name="my_profile">My Profile</string>
    <string name="my_appointments">My Appointments</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="drawerOpen">drawer open</string>
    <string name="drawerClose">drawer close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="concat_us">Concat Us</string>
    <string name="account_type_error">You must select the account type!</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter the doctor name</string>
    <string name="find_doctor">Let\'s Find Your \nDoctor</string>
    <string name="categories">Categories</string>
    <string name="available_doctor">Available Doctor</string>
    <string name="tooth">tooth</string>
    <string name="heart">heart</string>
    <string name="rating">rating</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="experience">Experience</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="patient">Patient</string>
    <string name="location">Location</string>
    <string name="book_appointment">Book an Appointment</string>
    <string name="availability">Availability:</string>
    <string name="update_profile">Update My Profile</string>
    <string name="edit">Edit</string>
    <string name="update_profile_dialog">Are you sure to update your profile?</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="username_error">Username must be entered</string>
    <string name="phone_error">Phone must be entered</string>
    <string name="password_error">Password must be entered</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="recent_appointments">Recent Appointment</string>
    <string name="delete">Delete</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_content">Enter The Content</string>
    <string name="send_email">Send Email</string>
    <string name="key_night_mode">night_mode</string>
    <string name="summary_night_mode">Change the app theme</string>
    <string name="night_mode">Night Theme</string>
    <string name="email">Email</string>
    <string name="email_error">Email must be entered</string>
    <string name="country_error">country must be enter!!</string>
    <string name="city_error">city must be enter!!</string>
    <string name="street_error">street must be enter!!</string>
    <string name="experience_error">experience must be enter!!</string>
    <string name="biography_error">biography must be enter!!</string>
    <string name="specialization_error">specialization must be enter!!</string>
    <string name="start_day_error">You must select start day</string>
    <string name="end_day_error">You must select end day</string>
    <string name="work_day_error">The start day must be different from the end day</string>
    <string name="start_hour_error">You must choose start hour</string>
    <string name="end_hour_error">You must choose end hour</string>
    <string name="time_error">You must choose the time!</string>
    <string name="days">Days:</string>
    <string name="to">to</string>
    <string name="time">Times:</string>
    <string name="select_date">Select Date</string>
    <string name="confirm_appointment">Confirm appointment</string>
    <string name="orders">Orders</string>
    <string name="accept">Accept</string>
    <string name="login_error">Login failed! Please try again</string>
    <string name="success_sign_up">Successful sign up, enjoy</string>
    <string name="error_sign_up">Error in sign up, Try again</string>
    <string name="doctor">Doctor</string>
    <string name="choose_account_type2">Choose Account Type</string>
    <string name="permissions_error">Permission denied…!</string>
    <string name="image_error">No Image Found!</string>
    <string name="general_error">Something is wrong try later</string>
    <string name="eyes">eyes</string>
    <string name="bones">bones</string>
    <string name="brain">Brain</string>
    <string name="more">More</string>
    <string name="content_error">Content must entered!</string>
    <string name="subject_error">Subject must entered!</string>
    <string name="date_error">You must choose date!</string>
    <string name="time_not_valid">Choose valid time</string>
    <string name="day_not_valid">Choose valid day</string>
    <string name="success_book_appointment">The doctor confirm your appointment in soon</string>
    <string name="no_orders">No orders to display</string>
    <string name="cancel_success">Appointment canceled successfully</string>
    <string name="done">Done</string>
    <string name="image_update">Image has been updated</string>
    <string name="image_update_failed">Image update failed</string>
    <string name="success_book_appointment_title">Appointment successfully</string>
    <string name="doctor_not_found">Doctor not found!</string>
    <string name="delete_appointment">Appointment deleted successfully</string>
    <string name="image_uploaded">Image uploaded successfully</string>
    <string name="image_fail_uploaded">Failed to upload image</string>
    <string name="check_email">Check your email</string>
    <string name="email_send">Email Sended</string>
    <string name="verify_email">Your email not verify</string>
    <string name="verify_error">Failed to send verification email</string>
    <string name="enter_subject">Enter The Subject</string>

</resources>